<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>bob</name>
	<description>Builder generator for Java</description>
	<url>https://github.com/jonas-grgt/bob</url>
	<modules>
		<module>annotations</module>
		<module>processor</module>
	</modules>
	<groupId>io.jonasg</groupId>

	<developers>
		<developer>
			<name>Jonas Geiregat</name>
			<email>jonas.grgt@gmail.com</email>
		</developer>
		<developer>
			<name>Joran Van Belle</name>
			<email>joran.vanbelle@live.be</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<artifactId>bob</artifactId>
	<packaging>pom</packaging>
	<version>0.6.0</version>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
		<maven-aseembly-plugin.version>3.15.0</maven-aseembly-plugin.version>
		<maven-source-plugin.version>3.4.0</maven-source-plugin.version>
		<maven-spotless-plugin.version>3.4.0</maven-spotless-plugin.version>
		<maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
		<maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
		<flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
		<surefire-maven-plugin.version>3.5.5</surefire-maven-plugin.version>

		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<jreleaser.version>1.24.0</jreleaser.version>
		<java-poet.version>0.15.0</java-poet.version>
		<junit-bom.version>6.0.3</junit-bom.version>
		<assertj-core.version>3.27.7</assertj-core.version>
		<mockito-core.version>5.23.0</mockito-core.version>
		<cute.version>1.9.0</cute.version>
	</properties>

	<scm>
		<url>https://github.com/jonasg-grgt/bob</url>
		<connection>scm:git:https://github.com/jonasg-grgt/bob</connection>
		<tag>HEAD</tag>
	</scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.palantir.javapoet</groupId>
				<artifactId>javapoet</artifactId>
				<version>${java-poet.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj-core.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>io.toolisticon.cute</groupId>
				<artifactId>cute</artifactId>
				<version>${cute.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>${flatten-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jreleaser</groupId>
					<artifactId>jreleaser-maven-plugin</artifactId>
					<version>${jreleaser.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<pomElements>
						<url/>
						<name/>
						<description/>
						<scm/>
						<developers/>
						<inceptionYear/>
					</pomElements>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>${maven-spotless-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<formats>
						<format>
							<includes>
								<include>.gitattributes</include>
								<include>.gitignore</include>
							</includes>
							<trimTrailingWhitespace/>
							<endWithNewline/>
						</format>
					</formats>
					<java>
						<eclipse>
							<version>4.26</version>
							<file>eclipse-formatter.xml</file>
						</eclipse>
					</java>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jreleaser</groupId>
						<artifactId>jreleaser-maven-plugin</artifactId>
						<inherited>false</inherited>
						<configuration>
							<jreleaser>
								<project>
									<description>Bob - Builder generator for Java</description>
									<links>
										<homepage>https://github.com/jonas-grgt/bob</homepage>
									</links>
									<license>APACHE-2.0</license>
									<authors>Jonas Geiregat</authors>
									<copyright>2026 Jonas Geiregat</copyright>
								</project>
								<release>
									<github>
										<changelog>
											<formatted>ALWAYS</formatted>
											<preset>conventional-commits</preset>
										</changelog>
									</github>
								</release>
								<signing>
									<active>ALWAYS</active>
									<armored>true</armored>
								</signing>
								<deploy>
									<maven>
										<mavenCentral>
											<sonatype>
												<active>ALWAYS</active>
												<url>https://central.sonatype.com/api/v1/publisher</url>
												<stagingRepositories>target/staging-deploy</stagingRepositories>
											</sonatype>
										</mavenCentral>
									</maven>
								</deploy>
							</jreleaser>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<attach>true</attach>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<attach>true</attach>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>release</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
